# HuafuSlicer

./: CMakeLists.txt
HuafuSlicer/: GCodeParser.cpp  GCodeParser.h  HuafuWorkspaceMessageHub.cpp  HuafuWorkspaceMessageHub.h  Main.qml  MeshLoader.cpp  MeshLoader.h  OpenGLViewport.cpp  OpenGLViewport.h  PreviewSimulation.qml  WindowHelper.cpp  WindowHelper.h  WorkspaceResponseHub.qml  main.cpp
resources/: Resource.qrc  Youtian3D.qrc
resources/profiles/: fdm_machine_common.json
src/libslic3r/: AABBMesh.cpp  CMakeLists.txt  CMakeLists备份.txt  Config.hpp  Emboss.cpp  FilamentGroup.hpp  FilamentGroupUtils.hpp  Flow.hpp  FlushVolCalc.cpp  GCode.cpp  GCode.hpp  Model.cpp  Model.hpp  PrecompiledHeader.cmake  PrintConfig.hpp  TriangleMeshSlicer.cpp  libslic3r.h  pchheader.hpp
src/libslic3r/Feature/FuzzySkin/: FuzzySkin.cpp
src/libslic3r/Fill/: FillBase.hpp
src/libslic3r/SLA/: Hollowing.cpp
src/libslicgui/: AppEnvironment.cpp  AppEnvironment.hpp  CMakeLists.txt  GUI.cpp  GUI.hpp  GUI_App.cpp  GUI_App.hpp  HuafuAppBootstrap.cpp  HuafuAppBootstrap.hpp  HuafuApplicationController.cpp  HuafuApplicationController.hpp  MeshToScene.cpp  MeshToScene.hpp  Plater.cpp  Plater.hpp  Slic3rDocument.hpp  copy.md
src/libslicgui/facade/: AppEnvironment.cpp  AppEnvironment.hpp  GUI.cpp  GUI.hpp  GUI_App.cpp  GUI_App.hpp  GuiWorkspaceHub.cpp  GuiWorkspaceHub.hpp  Plater.cpp  Plater.hpp
tools/: gen_background_nebula.py
